fixed title text wrap

--- a/src/modules/forecast/components/weatherCards/WeatherCard.scss
+++ b/src/modules/forecast/components/weatherCards/WeatherCard.scss
@@ -6,6 +6,7 @@
 	user-select: none;
 
 	&__title {
+		white-space: nowrap;
 		@media(max-width: 750px) {
 			display: none;
 		}
